# QEmailValidator

./: CMakeLists.txt  qemailvalidator.cpp
